# ai-smart-contract-preauditor

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPENDENCY_STATUS.md  FIX_FREEZING.md  FORUM_TRAINING_GUIDE.md  LICENSE  MISSION_ACCOMPLISHED.md  MULTI_SOURCE_COLLECTION.md  NEURAL_NETWORK_AUDITOR.md  README.md  SYSTEM_STATUS.md  TRAINING_GUIDE.md  TRAINING_SUCCESS.md  __init__.py  audit_any_contract.py  audit_report.md  audit_report_demo.md  audit_report_vault.md  demo_internet_auditor.py  generate_training_data.py  neural_auditor.py  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements-forum.txt  requirements.txt  setup.sh  test_contract.sol  test_setup.py  train_model.py  train_model_low_memory.py  train_with_forum_data.py  validate_training.py
auditor/: __init__.py  cli.py  core.py
config/: basic_training.yaml
contracts/patched/: reentrancy_fixed.sol
contracts/vulnerable/: access_control.sol  integer_overflow.sol  reentrancy_victim.sol  unchecked_calls.sol  vault.sol
data/: INTERNET_TRAINING_README.md  __init__.py  collect_data.py  collectors.py  forum_collectors.py  internet_collectors.py  internet_integration_example.py  internet_integration_guide.py  process_data.py  schema.py
docs/: api.md  dataset_schema.md  evaluation.md  training.md
evaluation/: evaluate.py  evaluator.py
tests/: testing_framework.py
training/: tokenizer.py  train.py
training/configs/: codellama_7b.yaml  deepseek_coder_6_7b.yaml  phi3_mini.yaml  phi3_mini_low_memory.yaml  starcoder2_3b.yaml  temp_forum_training.yaml  temp_low_memory_training.yaml
