[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "slither.*",
    "brownie.*",
    "solcx.*",
    "web3.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=auditor",
    "--cov=training", 
    "--cov=data",
    "--cov=evaluation",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80"
]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "contract-ai-auditor"
dynamic = ["version"]
description = "AI-powered smart contract security auditing"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Contract AI Auditor Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "web3>=6.0.0",
    "click>=8.1.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]

[project.scripts]
audit-contract = "auditor.cli:main"
train-model = "training.cli:main"
evaluate-model = "evaluation.cli:main"

[project.urls]
Homepage = "https://github.com/contract-ai-auditor/contract-ai-auditor"
Repository = "https://github.com/contract-ai-auditor/contract-ai-auditor.git"
Documentation = "https://contract-ai-auditor.readthedocs.io/"
"Bug Tracker" = "https://github.com/contract-ai-auditor/contract-ai-auditor/issues"